--- a/config/packages/security.yaml
+++ b/config/packages/security.yaml
@@ -1,15 +1,18 @@
 security:
     # https://symfony.com/doc/current/security.html#where-do-users-come-from-user-providers
     providers:
-        users_in_memory: { memory: null }
+        users:
+            entity:
+                class: 'App\Entity\User'
+                property: 'GID'
     firewalls:
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
             security: false
         main:
-            anonymous: true
+            anonymous: false
             lazy: true
-            provider: users_in_memory
+            provider: users
             guard:
                 authenticators:
                     - App\Security\UserAuthAuthenticator
